-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.0-beta1
-
macOS 10.12, iOS 10.3.1, iPhone 6s
Clicking the stop button while the application is running on a iOS device, "ends" the process in Qt Creator, but it stays running on the device.
| For Gerrit Dashboard: QTCREATORBUG-18108 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 193301,5 | iOSTool: Fix stopGdbServer invocation | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |