iOSTool: Fix stopGdbServer invocation

This amends commit 86882018dd39205ba281d9edcd54008e0b9d4156.

Task-number: QTCREATORBUG-18108
Change-Id: I7c984e2f3596fb79a6027fe85c11577b3d1acf2e
Reviewed-by: Eike Ziller <eike.ziller@qt.io>